--- a/Source/AllowanceApp.Blazor/Components/Cards/TransactionCard.razor
+++ b/Source/AllowanceApp.Blazor/Components/Cards/TransactionCard.razor
@@ -39,13 +39,13 @@
 
     <!-- Table -->
     <div class="overflow-x-auto">
-        <table class="min-w-full border border-gray-200 dark:border-gray-700 rounded-lg">
+        <table class="table-fixed min-w-full border border-gray-200 dark:border-gray-700 rounded-lg">
             <thead class="bg-gray-100 dark:bg-gray-800">
                 <tr>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Transaction ID</th>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Date</th>
                     <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Status</th>
-                    <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300">Description</th>
+                    <th class="px-4 py-2 text-left text-lg font-medium text-gray-700 dark:text-gray-300 w-50">Description</th>
                     <th class="px-4 py-2 text-right text-lg font-medium text-gray-700 dark:text-gray-300">Amount</th>
                 </tr>
             </thead>
