--- a/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
@@ -13,7 +13,7 @@
 @if (!LoggedIn)
 {
     <Modal @ref="MyModal"
-        Title="Enter Your Grades"
+        Title="Enter your password"
         OnConfirm="HandleConfirm"
         OnCancel="HandleCancel"
         SizeLarge=false>
