Added a basic authentication service to the front-end to prevent access to certain controls.

--- a/Source/AllowanceApp.Blazor/Components/Cards/AccountManagementCard.razor
+++ b/Source/AllowanceApp.Blazor/Components/Cards/AccountManagementCard.razor
@@ -6,6 +6,8 @@
 @using AllowanceApp.Blazor.Components.Widgets
 @inject AccountApiService AccountApi
 
+@* BCOBB: Add "Delete Account" button to the card*@
+
 <div class="card-mgmt">
     <div class="text-center">
         <h2 class="card-title">Account Management</h2>
