First shot at using a CI pipeline

--- a/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
@@ -39,12 +39,12 @@ else
         <AccountManagementCard Accounts="accounts"></AccountManagementCard>
     }
 
-    <button class="btn-new-acct">
-        <span class="payout-text">Add new account</span>
-    </button>
+    @* Need to add a way to add a new account right here. Maybe a form pops up that takes in a name and sends the request. *@
+    @* <button class="btn-new-acct">
+        <span class="new-acct-text">Add new account</span>
+    </button> *@
 }
 
-@* Need to add a way to add accounts right here *@
 
 
 
