Added lint checks to CI pipeline

--- a/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Settings.razor
@@ -51,7 +51,7 @@ else
 @code {
     private Modal? MyModal;
     private List<AccountViewModel> accounts = [];
-    private string Password {get; set;}
+    private string Password {get; set;} = "";
 
     protected override async Task OnInitializedAsync()
     {
